--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - '8083:8080'
+      - '8083:8083'
     depends_on:
       - database
     volumes:
@@ -33,9 +33,9 @@ services:
     networks:
       - internal
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://paymentDB:5435/paymentDB
-      #- spring_rabbitmq_host=rabbitmq-container
-      #- spring_rabbitmq_port=5672+
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/paymentDB
+      - spring_rabbitmq_host=host.docker.internal
+      - spring_rabbitmq_port=5672
 
 networks:
   internal:
