--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: "PaymentService"
   jpa:
     database: postgresql
     show-sql: false
@@ -26,4 +28,9 @@ springdoc:
     path: /api-docs
 server:
   port: 8083
+eureka:
+  client:
+    service-url:
+      defaultZone: http://host.docker.internal:8084/eureka/
+
 
